# easy-manim

./: .dockerignore  .env.beta.example  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.build.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-images.yml
docs/plans/: 2026-03-11-mcp-validated-video-agent-design.md  2026-03-11-mcp-validated-video-agent-implementation-plan.md  2026-03-12-latex-mathtex-support-implementation-plan.md  (+94 more)
evals/: beta_long_tail_regressions.json  beta_prompt_suite.json
scripts/: beta_smoke.py  live_provider_gate.py  release_candidate_gate.py
tests/: conftest.py  support.py
ui/: .prettierignore  .prettierrc  AUDIT_REPORT.md  BUGFIX_SUMMARY.md  CHANGES_SUMMARY.md  DESIGN_SYSTEM_v2.md  DESIGN_V2.md  DESKTOP_UI_AUDIT.md  Dockerfile  ENGINEERING_AUDIT.md  FINAL_AUDIT_REPORT.md  FINAL_FIXES_SUMMARY.md  FIXES_APPLIED.md  FRONTEND_AUDIT_2026-04-06.md  FRONTEND_REAUDIT_CHECKLIST_2026-04-06.md  INTERACTION_AUDIT_REPORT.md  INTERACTION_FIXES_APPLIED.md  KIMI_CODE_FRONTEND_HANDOFF_2026-04-06.md  KIMI_CODE_FRONTEND_HANDOFF_ROUND3_2026-04-06.md  OPTIMIZATION_PLAN.md  README.md  REFACTOR_ANALYSIS.md  REFACTOR_COMPLETE.md  REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  REFACTOR_SUMMARY.md  REFACTOR_TRACKING.md  RESPONSIVENESS_AUDIT.md  RESPONSIVE_UI_AUDIT.md  STUDIO_README.md  UI_AUDIT_FIXES.md  UI_AUDIT_REPORT.md  UI_BUG_AUDIT_REPORT.md  UI_UX_AUDIT_REPORT.md  UX_OPTIMIZATION_REPORT.md  V2_DESIGN_SHOWCASE.md  WORKFLOW_INTERACTION_AUDIT.md  components.json  eslint.config.js  index.html  (+6 more)
(+673 files in other folders)
