[project]
name = "easy-manim"
version = "0.1.0"
description = "MCP validated video agent"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2,<3",
  "mcp[cli]>=1,<2",
  "httpx>=0.27,<1",
  "litellm>=1,<2",
  "tenacity>=9,<10",
  "Pillow>=10,<12",
  "fastapi>=0.116,<1",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.11,<1",
]
memory = [
  "mem0ai>=1,<2",
]

[project.scripts]
easy-manim-mcp = "video_agent.server.main:main"
easy-manim-db-bootstrap = "video_agent.database.main:main"
easy-manim-worker = "video_agent.worker.main:main"
easy-manim-doctor = "video_agent.doctor.main:main"
easy-manim-cleanup = "video_agent.cleanup.main:main"
easy-manim-export-task = "video_agent.export.main:main"
easy-manim-eval-run = "video_agent.eval.main:main"
easy-manim-delivery-canary = "video_agent.eval.canary:main"
easy-manim-qa-bundle = "video_agent.qa_bundle.main:main"
easy-manim-agent-admin = "video_agent.agent_admin.main:main"
easy-manim-api = "video_agent.server.api_main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F"]
